Hopefully final commit

--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -1051,13 +1051,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "nbpresent": {
-     "id": "e4c5ff23-25fc-476e-97af-fa1089319868"
-    }
-   },
+   "metadata": {},
    "source": [
-    "We met many challenges during the development of this project. Mainly surrounding inference, we experimented with different inference algorithms including SGLD and KLQP. We also tried different priors distributions such as standard Normals, Normals with higher variance, etc. but nothing worked quite as well as the Student-T. There are also some limitations as mentioned briefly before, the inability for the model to find proper segmentation for cyclists/pedestrians is a huge drawback. Although we can say that the model is always highly unsure of a region containing a cyclist/pedestrian, without a good guess for what's actually in the region the model is far from production ready. We present below an example that highlights more clearly where our model falls short.\n"
+    "The deep probabilistic modeling and inference approach was very challenging and it took many failed iterations and approaches to get reasonable results. We outline few limitations of our current model and approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a. Model Limitations\n",
+    "- The model as currently defined gives a proper estimation of prediction uncertainty, however it lacks accurate detection of certain classes (especially low frequency classes - pedestrians/bikes). See example below\n",
+    "\n",
+    "- There is lot of prior information which we know but seems difficult to reliably incorporate. Humans understand perspective and relative size of objects to make judgments, they have well formulated expectations of where to find objects and these are hard to codify in to probabilistic models\n",
+    "\n",
+    "- The model does not incorporate temporal aspects (which might be useful for this particular dataset). The next logical step would be to build a probabilistic video segmentation"
    ]
   },
   {
@@ -1072,6 +1080,23 @@
    "metadata": {},
    "source": [
     "In this set of photos two cyclist and a car are directly in our field of view. While the segmentation (top center) is able to pick out the buildings,sidewalk,road, and car with high level of certainty it starts to blend together and even has some black (meaning it does not have a classification) for that space where the pedestrians are. Also on the side of the image where there is another cyclist is labeled in the true segmentation our model shows black and blending once again. Thankfully, both areas are classified by a high level of uncertainty but the limitations of our model in classifying cyclists/pedestrians are definitely there"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b. Inference Limitations\n",
+    "- KLqp is highly unstable for non-Normal approximating distributions. We explored different models for KLqp - Gamma, Gumbel-Softmax but they were highly unstable\n",
+    "- Stochastic KLqp is very noisy if we explore models with other distributions\n",
+    "- Cannot be sure whether predictions are bad due to model misspecification or due to approximation errors. The iteration cycle becomes exhausting\n",
+    "\n",
+    "### c. Computational Challenges\n",
+    "- Could not explore MCMC methods because they were too slow/unstable - HMC/SGLD did not work\n",
+    "- Images had to be scaled down by 5x to be computationally feasible even with GPU (with 5 samples). Higher resolution could have provided more information to identify classes accurately. We did attempt original resolution images with batch sizes of 3, but the inference took way too long that we did not pursue this further\n",
+    "- Does not work on a CPU\n",
+    "\n",
+    "There is however huge scope for further exploration with  more complex models and inference techniques"
    ]
   },
   {
